Update 'fols43kpo-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe:852254e297fbf985909d3d21aaffc098e3e93b5f@sha256:503d923d0d29d7f38c906c7be7575c48338aa1dbfc052ba8ef02897b8c80e4d2

--- a/components/fols43kpo-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/fols43kpo-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: fols43kpo-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:852254e297fbf985909d3d21aaffc098e3e93b5f@sha256:503d923d0d29d7f38c906c7be7575c48338aa1dbfc052ba8ef02897b8c80e4d2
+          name: container-image
